--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (0.9.1-1trusty1ubuntu1) unstable; urgency=medium
+
+  * Add Python bindings
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 09 Jun 2017 14:52:43 +0900
+
 rbdyn (0.9.0-1trusty1) trusty; urgency=medium
 
   * Initial release.
